Minor changes in shell, taskrc and zathura
[sh] Add gnu-social project to ignored git repositories in the prompt
[task] Change timestamp format (underscore seems no longer valid)
[zathura] Don't recolour ("invert") by default

--- a/.config/sh/config
+++ b/.config/sh/config
@@ -98,7 +98,7 @@ vcs_update()
 {
 	# Update information if not in a blacklisted (read: huge) repo:
 	case "$(pwd)" in
-		$HOME/dev/linux*)
+		$HOME/dev/linux*|$HOME/dev/gnu/projects/gnu-social*)
 			vcs_branch='git'
 			vcs_state='kernel'
 			;;
