s/GNOME/MATE/ + minor fixes
* tmux: reload from correct path on <^B> <r>
* karuibar: ixh currently has no MPD server, due to disk space limits
* Make GTK+ read its config from the right path (XDG basedir!)
* vim: Remove alternate colour for non-text area (makes EOL look weird)

--- a/.config/tmux/config
+++ b/.config/tmux/config
@@ -37,7 +37,7 @@ bind-key j select-pane -t :.+
 bind-key k select-pane -t :.-
 
 # dev: keybindings for reloading config:
-bind-key r source-file ~/.tmux.conf \; display-message "Config reloaded..."
+bind-key r source-file ~/.config/tmux/config \; display-message "Config reloaded..."
 
 # Sane scrolling:
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
