[chef] Show XXX for todo, update variable name for non-verbose output

--- a/.config/sh/config
+++ b/.config/sh/config
@@ -31,7 +31,7 @@ alias lah='ls -lAh'
 alias laht='ls -lAht'
 alias ll='ls -lh'
 alias mv='mv -i'
-alias todo='grep -n -R "TODO\|FIXME" .'
+alias todo='grep -n -R "TODO\|FIXME\|XXX" .'
 if [ "$OS_RELEASE" = 'darwin' ]; then
 	alias ls='ls -G'
 else
