Add systemd user sessions
See https://wiki.archlinux.org/index.php/Systemd/User
Essentially, lighttpd will require a D-Bus setup. It may become
unnecessary in the near future, though.

--- a/.config/.gitignore
+++ b/.config/.gitignore
@@ -1,4 +1,5 @@
-ncmpcpp/error.log
-git/gitk
-vim/neobundle
-zsh/zshrc
+/ncmpcpp/error.log
+/git/gitk
+/vim/neobundle
+/zsh/zshrc
+/systemd/user/*.wants
