Fix systemd user service files
At startup, default.target is loaded, so multi-user.target.wants doesn't
serve any purpose.

Also, apparently one needs to tell dbus to set the right environment
variables. Luckily there is a shell script snippet provided in
/etc/X11/xinitrc.d/.

--- a/.config/systemd/user/mpdscribble.service
+++ b/.config/systemd/user/mpdscribble.service
@@ -6,4 +6,4 @@ After=mpd.service
 ExecStart=/usr/bin/mpdscribble --conf /home/ayekat/.config/mpdscribble/mpdscribble.conf --no-daemon
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=default.target
