--- a/.config/tmux/config
+++ b/.config/tmux/config
@@ -41,9 +41,7 @@ bind-key r source-file ~/.config/tmux/config \; display-message "Config reloaded
 
 # Sane scrolling:
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
-set -g mouse on
-bind -n WheelUpPane   select-pane -t= \; copy-mode -e \; send-keys -M
-bind -n WheelDownPane select-pane -t= \;                 send-keys -M
+if-shell 'echo $OS_RELEASE | grep debian' 'set -g mode-mouse on' 'set -g mouse on; bind -n WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M; bind -n WheelDownPane select-pane -t= \; send-keys -M'
 
 # Remove Escape key delay:
 set -sg escape-time 0
