--- a/.config/lighttpd/lighttpd.conf
+++ b/.config/lighttpd/lighttpd.conf
@@ -2,7 +2,10 @@
 
 # Basic server setup:
 server.port = 8080
-server.document-root = "/home/ayekat/.local/srv/http"
+server.document-root = "/home/ayekat/.local/srv/http/ayekat.ch"
+$HTTP["host"] =~ "^karui\.ayekat\.ch$" {
+	server.document-root = "/home/ayekat/.local/srv/http/karui.org"
+}
 
 # Logs:
 server.errorlog = "/home/ayekat/.cache/lighttpd/error.log"
