--- a/.config/systemd/user/mpd.service
+++ b/.config/systemd/user/mpd.service
@@ -7,16 +7,16 @@ ExecStart=/usr/bin/mpd --no-daemon
 
 # allow MPD to use real-time priority 50
 LimitRTPRIO=50
-LimitRTTIME=-1
+#LimitRTTIME=-1
 
 # move MPD to a top-level cgroup, as real-time budget assignment fails
 # in cgroup /system/mpd.service, because /system has a zero real-time
 # budget; see
 # http://www.freedesktop.org/wiki/Software/systemd/MyServiceCantGetRealtime/
-ControlGroup=cpu:/mpd
+#ControlGroup=cpu:/mpd
 
 # assign a real-time budget
-ControlGroupAttribute=cpu.rt_runtime_us 500000
+#ControlGroupAttribute=cpu.rt_runtime_us 500000
 
 [Install]
 WantedBy=default.target
