"Reverse-ignore" systemd services, add xtract_* scripts to bin's gitnore
We *really* need to get rid of those scripts in bin...

--- a/.local/bin/.gitignore
+++ b/.local/bin/.gitignore
@@ -1,10 +1,11 @@
-*.d
-checkstyle
-eriya
-karui*
-mtgpmk
-nios2sim
-open
-toolc-ref
-vmctl
-xor
+/*.d
+/checkstyle
+/eriya
+/karui*
+/mtgpmk
+/nios2sim
+/open
+/toolc-ref
+/vmctl
+/xor
+/xtract_*
