--- a/.config/.gitignore
+++ b/.config/.gitignore
@@ -2,5 +2,9 @@
 /git/gitk
 /vim/neobundle
 /zsh/zshrc
-/systemd/user/*.wants
-/systemd/user/eriya@.service
+/systemd/user/*
+!/systemd/user/lighttpd.service
+!/systemd/user/mpdscribble.service
+!/systemd/user/mpd.service
+!/systemd/user/mpd.socket
+!/systemd/user/ssh-agent.service
