Get ABS with history!
Yeah, I get the whole SVN rubbish with that - but I'm willing to pay
that little price for having a proper way to find out why certain
official packages have been updated.

--- a/.config/sh/config
+++ b/.config/sh/config
@@ -102,6 +102,16 @@ fi
 alias :e="$EDITOR"
 alias :q=exit
 
+if [ "$OS_RELEASE" = arch ]; then
+	abs()
+	{
+		git clone git://projects.archlinux.org/svntogit/packages.git \
+			--single-branch \
+			-b packages/"$1" \
+			"$1"
+	}
+fi
+
 # }}}
 # ------------------------------------------------------------------------------
 # PROMPT {{{
