Add `aur` command; make `rdp` handles config files differently
* `aur` works the same way as `abs`.
* xfreerdp has recently started to refuse configuration files, so I need
  to pass the content (which is essentially just a list of options) to
  xfreerdp directly.

--- a/.config/sh/config
+++ b/.config/sh/config
@@ -115,6 +115,15 @@ if [ "$OS_RELEASE" = arch ]; then
 			false
 		fi
 	}
+
+	aur()
+	{
+		if [ -n "$1" ]; then
+			git clone "https://aur.archlinux.org/$1" "$1"
+		else
+			echo "Please specify a package name" >&2
+		fi
+	}
 fi
 
 # }}}
