--- a/.local/etc/mpd/mpd.conf
+++ b/.local/etc/mpd/mpd.conf
@@ -1,7 +1,7 @@
 # See: /usr/share/doc/mpd/mpdconf.example
 
 user                 "ayekat"
-pid_file             "/home/ayekat/.local/run/mpd/mpd.pid"
+pid_file             "/home/ayekat/.local/run/mpd.pid"
 db_file              "/home/ayekat/.local/srv/mpd/mpd.db"
 state_file           "/home/ayekat/.local/srv/mpd/mpdstate"
 playlist_directory   "/home/ayekat/.local/srv/mpd/playlists"
