Configure lighttpd for locally running version of work project

--- a/.config/lighttpd/lighttpd.conf
+++ b/.config/lighttpd/lighttpd.conf
@@ -6,6 +6,9 @@ server.document-root = "/home/ayekat/.local/srv/http/ayekat.ch"
 $HTTP["host"] =~ "^karui\.ayekat\.ch$" {
 	server.document-root = "/home/ayekat/.local/srv/http/karui.org"
 }
+$HTTP["host"] =~ "^flora\.ixh$" {
+	server.document-root = "/home/ayekat/.local/srv/http/flora.papiliorama.local"
+}
 
 # Logs:
 server.errorlog = "/home/ayekat/.cache/lighttpd/error.log"
