Move stuff from .config into .local
This will require a complete reset of the dotfiles configuration on any
machine. Also, it's not sure that everything will work fine. Expect
things to break!

--- a/.local/etc/lighttpd/lighttpd.conf
+++ b/.local/etc/lighttpd/lighttpd.conf
@@ -11,7 +11,7 @@ $HTTP["host"] =~ "^flora\.ixh$" {
 }
 
 # Logs:
-server.errorlog = "/home/ayekat/.cache/lighttpd/error.log"
+server.errorlog = "/home/ayekat/.local/var/log/lighttpd/error.log"
 
 # Directories:
 index-file.names = ( "index.html" )
