--- a/.local/etc/mpd/mpd.conf
+++ b/.local/etc/mpd/mpd.conf
@@ -2,13 +2,13 @@
 
 user                 "ayekat"
 pid_file             "/home/ayekat/.local/run/mpd.pid"
-db_file              "/home/ayekat/.local/srv/mpd/mpd.db"
-state_file           "/home/ayekat/.local/srv/mpd/mpdstate"
-playlist_directory   "/home/ayekat/.local/srv/mpd/playlists"
+db_file              "/home/ayekat/.local/var/lib/mpd/mpd.db"
+state_file           "/home/ayekat/.local/var/lib/mpd/mpdstate"
+playlist_directory   "/home/ayekat/.local/var/lib/mpd/playlists"
 samplerate_converter "internal"    # see http://mpd.wikia.com/wiki/Tuning
 
 music_directory      "/home/ayekat/music"
-log_file             "/home/ayekat/.cache/mpd/mpd.log"
+log_file             "/home/ayekat/.local/var/log/mpd.log"
 
 bind_to_address      "any"
 port                 "6600"
