[lighttpd] Add temperature portal

--- a/.local/etc/lighttpd/lighttpd.conf
+++ b/.local/etc/lighttpd/lighttpd.conf
@@ -1,13 +1,19 @@
 # lighttpd configuration for user session
 
-# Basic server setup:
 server.port = 8080
-server.document-root = "/home/ayekat/.local/srv/http/ayekat.ch"
-$HTTP["host"] =~ "^karui\.ayekat\.ch$" {
+
+# Virtual Hosts:
+#$HTTP["host"] = "ayekat.ch" {
+	server.document-root = "/home/ayekat/.local/srv/http/ayekat.ch"   # default
+#}
+$HTTP["host"] =~ "^karui\." {
 	server.document-root = "/home/ayekat/.local/srv/http/karui.org"
 }
-$HTTP["host"] =~ "^flora\.ixh$" {
+$HTTP["host"] =~ "^flora\." {
 	server.document-root = "/home/ayekat/.local/srv/http/flora.papiliorama.local"
+}
+$HTTP["host"] =~ "^temperature\." {
+	server.document-root = "/home/ayekat/.local/srv/http/temperature.papiliorama.local"
 }
 
 # Logs:
