[lighttpd] Restructure config, add temperature portal

--- a/.local/etc/lighttpd/lighttpd.conf
+++ b/.local/etc/lighttpd/lighttpd.conf
@@ -1,6 +1,17 @@
 # lighttpd configuration for user session
 
+# Modules:
+include "conf.d/mimetype.conf"
+include "conf.d/cgi.conf"         # .cgi => python3
+include "conf.d/rewrite.conf"     # *.* => /cgi/main.cgi
+
+# Basic server configuration:
 server.port = 8080
+server.errorlog = "/home/ayekat/.local/var/log/lighttpd/error.log"
+
+# Directories:
+index-file.names = ( "index.html" )
+dir-listing.activate = "disable"
 
 # Virtual Hosts:
 #$HTTP["host"] = "ayekat.ch" {
@@ -15,15 +26,3 @@ $HTTP["host"] =~ "^flora\." {
 $HTTP["host"] =~ "^temperature\." {
 	server.document-root = "/home/ayekat/.local/srv/http/temperature.papiliorama.local"
 }
-
-# Logs:
-server.errorlog = "/home/ayekat/.local/var/log/lighttpd/error.log"
-
-# Directories:
-index-file.names = ( "index.html" )
-dir-listing.activate = "disable"
-
-# Modules:
-include "conf.d/mimetype.conf"
-include "conf.d/cgi.conf"
-include "conf.d/rewrite.conf"
