--- a/.local/etc/lighttpd/lighttpd.conf
+++ b/.local/etc/lighttpd/lighttpd.conf
@@ -26,3 +26,6 @@ $HTTP["host"] =~ "^flora\." {
 $HTTP["host"] =~ "^temperature\." {
 	server.document-root = "/home/ayekat/.local/srv/http/temperature.papiliorama.local"
 }
+$HTTP["host"] =~ "^it\." {
+	server.document-root = "/home/ayekat/.local/srv/http/it.papiliorama.local"
+}
