--- a/.local/etc/lighttpd/lighttpd.conf
+++ b/.local/etc/lighttpd/lighttpd.conf
@@ -29,3 +29,6 @@ $HTTP["host"] =~ "^temperature\." {
 $HTTP["host"] =~ "^it\." {
 	server.document-root = "/home/ayekat/.local/srv/http/it.papiliorama.local"
 }
+$HTTP["host"] =~ "^lists\." {
+	server.document-root = "/home/ayekat/.local/srv/http/lists.papiliorama.ch"
+}
