[sh] Make `ll` print date according to RFC-3339/ISO-8601

--- a/.local/etc/sh/config
+++ b/.local/etc/sh/config
@@ -27,9 +27,9 @@ alias cp='cp -i'
 alias grep='grep --color=auto'
 alias info='info --vi-keys'
 alias la='ls -A'
-alias lah='ls -lAh'
-alias laht='ls -lAht'
-alias ll='ls -lh'
+alias lah='ll -A'
+alias laht='ll -At'
+alias ll='ls -lh --time-style=long-iso'
 alias mv='mv -i'
 alias todo='grep -n -R "TODO\|FIXME\|XXX" .'
 if [ "$OS_RELEASE" = 'darwin' ]; then
