--- a/.local/etc/systemd/user/mpd.service
+++ b/.local/etc/systemd/user/mpd.service
@@ -3,20 +3,11 @@ Description=Music Player Daemon
 After=network.target sound.target
 
 [Service]
-ExecStart=/usr/bin/mpd --no-daemon "%h/.local/etc/mpd/mpd.conf"
+ExecStart=/usr/bin/mpd --no-daemon ${XDG_CONFIG_HOME}/mpd/mpd.conf
 
 # allow MPD to use real-time priority 50
 LimitRTPRIO=50
 #LimitRTTIME=-1
-
-# move MPD to a top-level cgroup, as real-time budget assignment fails
-# in cgroup /system/mpd.service, because /system has a zero real-time
-# budget; see
-# http://www.freedesktop.org/wiki/Software/systemd/MyServiceCantGetRealtime/
-#ControlGroup=cpu:/mpd
-
-# assign a real-time budget
-#ControlGroupAttribute=cpu.rt_runtime_us 500000
 
 [Install]
 WantedBy=default.target
