Ignore more stuff in $XDG_CONFIG_HOME, so we can symlink the entire dir
Some of those are a slight PITA, and will likely be removed once I've
finished civil service.

Also, notify me whenever an application adds something into that
directory (since I have to track the entire directory now).

--- a/.local/etc/.gitignore
+++ b/.local/etc/.gitignore
@@ -1,5 +1,18 @@
+# Papiliorama
+/httpd/
+/KeePass/
+
+# Others
+/asciinema/
+/dconf/
 /dwb/
+/freerdp/
+/gconf/
 /htop/
 /irssi/
+/klavaro/
+/libreoffice/
 /nitrogen/
 /openvpn/
+/qutebrowser/
+/sakura/
