Remove old mpdscribble config; fix music path for MPD config
The @lastfm folks refused to fix the issues caused by their two-week
limit [1], so I've refused to continue using their service (99% of my
music is listened on my iPod, which I couldn't reasonably track
anymore).

[1] http://www.last.fm/forum/34905/_/2248575

--- a/.local/etc/mpd/mpd.conf
+++ b/.local/etc/mpd/mpd.conf
@@ -7,7 +7,7 @@ state_file           "/home/ayekat/.local/var/lib/mpd/mpdstate"
 playlist_directory   "/home/ayekat/.local/var/lib/mpd/playlists"
 samplerate_converter "internal"    # see http://mpd.wikia.com/wiki/Tuning
 
-music_directory      "/home/ayekat/music"
+music_directory      "/home/ayekat/media/music"
 log_file             "/home/ayekat/.local/var/log/mpd.log"
 
 bind_to_address      "any"
