Move a couple of variable definitions to their right place
* Freetype hinting property is defined at X11 start-up now.
* Environment variables that modify the "look" of CLI applications are
  defined in the shell *config* now, to put them together with the
  aliases, which are there for the same purpose.
* `sudo` is now a script in ~/.local/bin. This is both more consistent
  with the general policy of putting more complex command wrappers in
  there, and a security measure, as an attacker will less likely be able
  to drop a sudo replacement there.
* Don't add the sbin directories to $PATH, as this is usually handled by
  the OS anyway.
* In xinitrc, don't make non-global variables all-caps.

--- a/.local/etc/sh/config
+++ b/.local/etc/sh/config
@@ -20,7 +20,34 @@ fi
 
 # }}}
 # ------------------------------------------------------------------------------
-# FUNCTIONS/ALIASES {{{
+# LOOK & FEEL {{{
+
+# Set output style for `ls` in coreutils>=8.25:
+export QUOTING_STYLE=literal
+
+# Set colours for ls:
+export LS_COLORS='fi=0:di=34:ex=32:ln=36:or=1;36:mi=1;31:bd=1;33:cd=33:pi=35:so=1;35'
+#                 file dir   exec  link  orphan          block   char  pipe  socket
+#                                        link    target
+
+# Set colours for gcc:
+export GCC_COLORS='error=01;31:warning=33:note=36:caret=01;32:locus=37:quote=32'
+
+# Set colours for less, man:
+LESS_TERMCAP_me="$(printf "\033[0m")"
+LESS_TERMCAP_se="$(printf "\033[0m")"
+LESS_TERMCAP_so="$(printf "\033[30;43m")"
+LESS_TERMCAP_ue="$(printf "\033[0m")"
+LESS_TERMCAP_us="$(printf "\033[32m")"
+LESS_TERMCAP_mb="$(printf "\033[34m")"
+LESS_TERMCAP_md="$(printf "\033[31m")"
+export LESS_TERMCAP_mb
+export LESS_TERMCAP_md
+export LESS_TERMCAP_me
+export LESS_TERMCAP_se
+export LESS_TERMCAP_so
+export LESS_TERMCAP_ue
+export LESS_TERMCAP_us
 
 # Aliases:
 alias cp='cp -i'
@@ -32,6 +59,7 @@ alias laht='ll -At'
 alias ll='ls -lh --time-style=long-iso'
 alias mv='mv -i'
 alias todo='grep -n -R "TODO\|FIXME\|XXX" .'
+alias view='vim -R'
 if [ "$OS_RELEASE" = 'darwin' ]; then
 	alias ls='ls -G'
 else
@@ -40,20 +68,6 @@ fi
 
 # Application specific aliases:
 cmd_exists valgrind && alias valgrind='valgrind --log-file=valgrind.log'
-cmd_exists view vim && alias view='vim -R'
-
-# Pass user environment when launching vim with sudo:
-if cmd_exists sudo; then
-	sudo()
-	{
-		if { [ "$1" = 'vim' ] || [ "$1" = 'vimdiff' ] || [ "$1" = 'visudo' ]; }\
-		&& cmd_exists "$1"; then
-			command sudo -E "$@"
-		else
-			command sudo "$@"
-		fi
-	}
-fi
 
 # Server only aliases (mostly additional security):
 if [ -n "$SSH_CONNECTION" ]; then
