--- a/.local/etc/sh/config
+++ b/.local/etc/sh/config
@@ -85,22 +85,28 @@ pc_vcs_ahead="$(printf "\033[36m")"
 pc_vcs_ready="$(printf "\033[33m")"
 pc_vcs_dirty="$(printf "\033[31m")"
 pc_vcs_merge="$(printf "\033[1;31m")"
-pc_dot_ahead="$(printf "\033[30;46m")"
-pc_dot_ready="$(printf "\033[30;43m")"
-pc_dot_dirty="$(printf "\033[30;41m")"
-pc_dot_merge="$(printf "\033[30;41m")"
+pc_dot_bracket="$(printf "\033[34m")"
+pc_dot_ahead="$(printf "\033[36m")"
+pc_dot_ready="$(printf "\033[33m")"
+pc_dot_dirty="$(printf "\033[31m")"
+pc_dot_merge="$(printf "\033[31m")"
 pc_host=$(printf "\033[35m")
 pc_pwd=$(printf "\033[34m")
 pc_prompt=$(printf "\033[1;31m")
 pc_jobs=$(printf "\033[30;47m")
 
-# VCS:
+# VCS
+# vcs_state and vcs_branch are set by calling vcs_update() with the path to the
+# git repository. If no path is specified, it takes the current working
+# directory.
 vcs_state=''
 vcs_branch=''
-gstat() { git -C "$1" status --porcelain 2>/dev/null; }
-ghead() { git -C "$1" status --porcelain -b 2>/dev/null | head -n 1; }
 vcs_update()
 {
+	_dir="${1:-$(pwd)}"
+	_ghead() { git -C "$_dir" status --porcelain -b 2>/dev/null | head -n 1; }
+	_gstat() { git -C "$_dir" status --porcelain 2>/dev/null; }
+
 	# This machine is slow, so don't print git repository information in prompt:
 	[ "$(hostname)" != 'ds-wrk3' ] || return
 
@@ -112,16 +118,19 @@ vcs_update()
 			;;
 		*)
 			vcs_state=''
-			vcs_branch="$(ghead "$1" | cut -d '.' -f 1 | cut -d ' ' -f 2)"
+			vcs_branch="$(_ghead "$_dir" | cut -d '.' -f 1 | cut -d ' ' -f 2)"
 			if [ -n "$vcs_branch" ]; then
 				vcs_state='clean'
-				ghead "$1" | grep -o 'ahead' >/dev/null && vcs_state='ahead'
-				gstat "$1" | grep  '^[MADR].' >/dev/null && vcs_state='ready'
-				gstat "$1" | grep  '^.[M?D]' >/dev/null && vcs_state='dirty'
-				gstat "$1" | grep  'UU' >/dev/null && vcs_state='merge'
+				_ghead "$1" | grep -o 'ahead' >/dev/null && vcs_state='ahead'
+				_gstat "$1" | grep  '^[MADR].' >/dev/null && vcs_state='ready'
+				_gstat "$1" | grep  '^.[M?D]' >/dev/null && vcs_state='dirty'
+				_gstat "$1" | grep  'UU' >/dev/null && vcs_state='merge'
 			fi
 			;;
 	esac
+
+	unset -f _ghead
+	unset -f _gstat
 }
 
 # }}}
