--- a/.local/etc/sh/config
+++ b/.local/etc/sh/config
@@ -1,4 +1,3 @@
-#!/usr/bin/env sh
 # Configuration for interactive shells.
 # Written by ayekat on a warm summer day in 2013.
 
@@ -47,7 +46,7 @@ alias ll='ls -lh --time-style=long-iso'
 alias mv='mv -i'
 alias todo='grep -n -R "TODO\|FIXME\|XXX" .'
 alias view='vim -R'
-if [ "$OS_RELEASE" = 'darwin' ]; then
+if [ "$OS_NAME" = 'darwin' ]; then
 	alias ls='ls -G'
 else
 	alias ls='ls --color=auto'
