open: s/pluma/xvim/g

--- a/.local/etc/irssi/config
+++ b/.local/etc/irssi/config
@@ -22,7 +22,9 @@ ignores = (
       "#gnugeneration",
       "#netfilter",
       "#python",
+      "#qemu",
       "#qutebrowser",
+      "#raspbian",
       "#systemd",
       "#ubuntu",
       "##windows",
