Minor changes in qb config + new bookmarks
* Allow typing of "shorthand" host names, without the domain part (I
  don't like my hostnames cause a query on DuckDuckGo).
* Don't steal focus when opening a link from an external application
  (it's annoying as hell, mostly because I use a shitty WM).
* Auto-enter insert mode when the web page requests so (I never realised
  how often I rely on that feature until now).

Also, add "Tufte CSS" to my bookmarks - expect a few changes on my
personal website in the next few days!

--- a/.local/etc/qutebrowser/qutebrowser.conf
+++ b/.local/etc/qutebrowser/qutebrowser.conf
@@ -176,7 +176,7 @@ startpage = about:blank
 yank-ignored-url-parameters = ref,utm_source,utm_medium,utm_campaign,utm_term,utm_content
 default-open-dispatcher =
 default-page = ${startpage}
-auto-search = naive
+auto-search = dns
 auto-save-config = true
 auto-save-interval = 15000
 editor = xvim "{}"
@@ -187,7 +187,7 @@ print-element-backgrounds = true
 xss-auditing = false
 site-specific-quirks = true
 default-encoding =
-new-instance-open-target = tab
+new-instance-open-target = tab-silent
 new-instance-open-target.window = last-focused
 log-javascript-console = none
 save-session = true
@@ -542,7 +542,7 @@ timeout = 500
 partial-timeout = 1000
 insert-mode-on-plugins = false
 auto-leave-insert-mode = true
-auto-insert-mode = false
+auto-insert-mode = true
 forward-unbound-keys = auto
 spatial-navigation = false
 links-included-in-focus-chain = true
@@ -1066,7 +1066,7 @@ wr       = http://wordreference.com/enfr/{}
 dw       = https://wiki.debian.org/FrontPage?action=fullsearch&context=180&value={}
 aw       = https://wiki.archlinux.org/index.php?title=Special:Search&search={}
 ap       = https://www.archlinux.org/packages/?sort=&q={}&maintainer=&flagged=
-aur      = https://aur4.archlinux.org/packages/?O=0&K={}
+aur      = https://aur.archlinux.org/packages/?O=0&K={}
 ghub     = https://github.com/search?utf8=✓&q={}
 hayoo    = http://holumbus.fh-wedel.de/hayoo/hayoo.html?query={}
 hulbee   = https://hulbee.com/?query={}&region=browser&uiLanguage=browser
