--- a/.local/etc/irssi/config
+++ b/.local/etc/irssi/config
@@ -219,7 +219,7 @@ settings = {
 logs = { };
 hilights = (
   {
-    text = "^[A-Za-z0-9.,:;!?|<>{} ]*([Aa]yekat|[Kk]arui)";
+    text = "^[A-Za-z0-9.,:;!?|<>{} ]*([Aa]yekat|[Kk]arui|[Tt]inu)";
     nick = "yes";
     word = "yes";
     regexp = "yes";
