Don't listen to 'tinu' in IRC, ignore qsettings directory in qute config
'tinu' is part of some common english words, like 'continue' -.-

--- a/.local/etc/irssi/config
+++ b/.local/etc/irssi/config
@@ -219,7 +219,7 @@ settings = {
 logs = { };
 hilights = (
   {
-    text = "^[A-Za-z0-9.,:;!?|<>{} ]*([Aa]yekat|[Kk]arui|[Tt]inu)";
+    text = "^[A-Za-z0-9.,:;!?|<>{} ]*([Aa]yekat|[Kk]arui)";
     nick = "yes";
     word = "yes";
     regexp = "yes";
