qutebrowser: Set default download directory

--- a/.local/etc/qutebrowser/qutebrowser.conf
+++ b/.local/etc/qutebrowser/qutebrowser.conf
@@ -772,7 +772,7 @@ indicator-padding = 2,2,0,4
 # cache-size (Int):
 #     Size of the HTTP network cache.
 #     Default: 52428800
-download-directory =
+download-directory = $$HOME/tmp
 prompt-download-directory = true
 remember-download-directory = true
 maximum-pages-in-cache = 10
