--- a/.local/etc/.gitignore
+++ b/.local/etc/.gitignore
@@ -7,12 +7,13 @@
 /asciinema/
 /dconf/
 /freerdp/
-/gconf/
 /htop/
+/ibus/
 /klavaro/
 /libreoffice/
 /nitrogen/
 /openvpn/
+/pluma/
 /sakura/
 /Thunar/
 /xfce4/
