qutebrowser: Fix GitHub project page bookmark
Also, commit 98e6ccf548 in qutebrowser introduced fullscreen support for
the WebEngine backend, which caused a key config update.

--- a/.local/etc/qutebrowser/keys.conf
+++ b/.local/etc/qutebrowser/keys.conf
@@ -364,7 +364,7 @@ print
 open -t qute:settings
     Ss
 
-clear-keychain ;; search
+clear-keychain ;; search ;; fullscreen --leave
     <escape>
 
 reload -f
