--- a/.local/etc/qutebrowser/qutebrowser.conf
+++ b/.local/etc/qutebrowser/qutebrowser.conf
@@ -1042,7 +1042,7 @@ DEFAULT  = ${ddg}
 
 ddg      = https://duckduckgo.com/?q={}
 google   = https://www.google.com/search?q={}
-img      = https://images.google.com/search?q={}
+img      = https://www.google.com/search?tbm=isch&q={}
 news     = https://news.google.com/search?q={}
 map      = http://search.epfl.ch/process_web2010?lang=en&as_site_search=&q={}&engine=place
 meteo    = http://meteo.search.ch/?plz_ort={}
